Updated:
- Galacticraft Galaxy Map key to be ';'.

Downgraded:
- None.

Added:
- DeadlyWorld 1.0.1.
- DungeonPack 1.6.4
- HungerOverhaul 21-build3
- Lycanite'sMobs 1.4.1
- Mariculture 1.1.4e
- Witchery 0.13.1

Removed:
- CraftGuide.
- Factorization.
- StargateTech2.
- Underground Biomes.

Fixed:
- None.