@@ -15,6 +15,7 @@ Added:
 Removed:
 - CraftGuide.
 - Factorization.
+- InfernalMobs (temporarily).
 - StargateTech2.
 - Underground Biomes.
 
